--- a/login/styles.css
+++ b/login/styles.css
@@ -1,8 +1,8 @@
 /* Estilizando o corpo da página */
 body {
     font-family: 'Arial', sans-serif; /* Define a fonte padrão para Arial, com fallback para sans-serif */
-    background-color: #b65c5c; /* Define a cor de fundo */
-    color: #ffffff; /* Define a cor do texto */
+    background-color: #f7ba91; /* Define a cor de fundo */
+    color: #2c3e50; /* Define a cor do texto */
     margin: 0; /* Remove margens padrão */
     padding: 0; /* Remove preenchimentos padrão */
     display: flex; /* Define o layout como flexível */
@@ -10,21 +10,22 @@ body {
     align-items: center; /* Centraliza os itens no eixo horizontal */
     justify-content: center; /* Centraliza os itens no eixo vertical */
     height: 100vh; /* Define a altura como 100% da viewport */
+    font-size: 1.5rem;
 }
 
 /* Estilizando o formulário de login */
 form {
     background: #282c34; /* Define a cor de fundo */
-    padding: 40px; /* Define o preenchimento */
-    border-radius: 8px; /* Define bordas arredondadas */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adiciona sombra */
+    padding: 100px; /* Define o preenchimento */
+    border-radius: 10px; /* Define bordas arredondadas */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Adiciona sombra */
     text-align: center; /* Centraliza o texto */
     width: 100%; /* Define a largura como total */
-    max-width: 400px; /* Define a largura máxima */
+    max-width: 500px; /* Define a largura máxima */
 }
 
 form h2 {
-    font-size: 1.8rem; /* Define o tamanho da fonte */
+    font-size: 2.5rem; /* Define o tamanho da fonte */
     margin-bottom: 20px; /* Define a margem inferior */
 }
 
@@ -35,7 +36,7 @@ form div {
 }
 
 form label {
-    font-size: 1rem; /* Define o tamanho da fonte */
+    font-size: 2rem; /* Define o tamanho da fonte */
     color: #ffffff; /* Define a cor do texto */
 }
 
@@ -45,7 +46,7 @@ form input[type="password"] {
     width: 100%; /* Define a largura como total */
     padding: 10px; /* Define o preenchimento */
     margin-top: 5px; /* Define a margem superior */
-    border: 1px solid #b65c5c; /* Define a cor da borda */
+    border: 1px solid #f7ba91; /* Define a cor da borda */
     border-radius: 5px; /* Define bordas arredondadas */
     background: #1c1e22; /* Define a cor de fundo */
     color: #ffffff; /* Define a cor do texto */
@@ -55,12 +56,12 @@ form input[type="password"] {
 form input[type="submit"] {
     width: 100%; /* Define a largura como total */
     padding: 10px; /* Define o preenchimento */
-    background-color: #0a84ff; /* Define a cor de fundo */
-    color: #ffffff; /* Define a cor do texto */
+    background-color: #f7ba91; /* Define a cor de fundo */
+    color: #000000; /* Define a cor do texto */
     border: none; /* Remove bordas */
     border-radius: 5px; /* Define bordas arredondadas */
     cursor: pointer; /* Define o cursor como pointer */
-    font-size: 1.2rem; /* Define o tamanho da fonte */
+    font-size: 1.5rem; /* Define o tamanho da fonte */
     transition: background-color 0.3s; /* Adiciona transição ao mudar a cor de fundo */
 }
 
