--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 }
 
 body {
-    background: #b65c5c;
-    color: #b65c5c;
+    background: #f7ba91;
+    color: #2c3e50;
     line-height: 1.6;
 }
 
